# mmlu-hallucination-lab

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml
src/mmlu_entity_corr/: __init__.py  analysis.py  cli.py  config.py  extraction.py  io_utils.py  json_utils.py  lm_eval.py  matching.py  normalize.py  prepare.py
tests/: test_extraction.py  test_matching.py  test_normalize.py  test_pipeline_integration.py  test_prepare.py
